AS: get VM stats for AS vm group